--- a/style.css
+++ b/style.css
@@ -427,6 +427,7 @@ footer > p {
   border: 0.1px solid silver;
   border-radius: 10px;
   padding: 10px;
+  box-shadow: 0px 0px 10px silver;
 }
 
 .fcard-top {
@@ -526,4 +527,5 @@ footer > p {
     #courses-section > p{
        text-align: center;
     }
+
 }
